# ghibli

./: .env.example  .gitignore  .spectra.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  skills-lock.json
evals/: README.md  compare_models.py  deepeval_judge.py  judge.py  models.py  queries.yaml  rejudge.py  results.json  run_evals.py  synthesizer_explore.py  tool_schema.py
evals/results/: gemini-vertex.json  gemma4.json  gpt51.json
evals/results-deepeval/: gemini-vertex.json  gemma4.json  gpt51.json
evals/synthesized-queries/: findings.md
openspec/: config.yaml
openspec/changes/multi-model-eval/: design.md  proposal.md  tasks.md
openspec/changes/output-formatter/: .openspec.yaml  proposal.md
openspec/specs/cli-interface/: spec.md
openspec/specs/eval-harness/: spec.md
openspec/specs/eval-judge/: spec.md
openspec/specs/exception-hierarchy/: spec.md
openspec/specs/gemini-authentication/: spec.md
openspec/specs/gemini-function-calling/: spec.md
specs/: eval-hardening-log.md  github-api-capabilities.md  mission.md  roadmap.md  tech-stack.md
src/ghibli/: agent.py  cli.py  exceptions.py  github_api.py  output.py  picker.py  prompt.py  sessions.py  tool_schema.py  tools.py
tests/: conftest.py
tests/integration/: test_github_api_integration.py
tests/unit/: test_agent.py  test_cli.py  test_compare_models.py  test_deepeval_judge.py  test_eval_queries.py  test_eval_runner.py  test_exceptions.py  test_github_api.py  test_judge.py  test_models.py  test_output.py  test_picker.py  test_sessions.py  test_tool_schema.py  test_tools.py
(+60 files in other folders)
